--- a/ag-dam.html
+++ b/ag-dam.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="bootstrap-5.3.3-dist/css/bootstrap.css">
+    <link rel="stylesheet" href="css/portal.css">
+    <link rel="shortcut icon" href="images/logo/Icon.png" type="image/x-icon">
+    <title>2º Via DAM</title>
 </head>
 <body>
-    <!--<header class="navbar navbar-expand-sm py-3"> 
+    <header class="navbar navbar-expand-sm py-3"> 
+        <div class="container">
             <div class="nav-brand">
                 <img src="images/logo/Union.png" alt="ag-logo" class="ag-logo">
             </div>
@@ -22,10 +27,15 @@
                         <a href="#" class="nav-link">Redefinir senha</a>
                     </li>
                     <li class="nav-item">
-                        <a href="index.html" class="nav-link">Sair</a>
+                        <a href="ag-login.html" class="nav-link">Sair</a>
                     </li>
                 </ul>
-            </div> 
-        <header>-->
+            </div>
+        </div>
+    </header>
+    <main class="container">
+        <h6>2º Via do Documento de Arrecadação Municipal</h6>
+    </main>
+    <script src="bootstrap-5.3.3-dist/js/bootstrap.js"></script>
 </body>
 </html>
