--- a/ag-senha.html
+++ b/ag-senha.html
@@ -22,12 +22,12 @@
                     <p>Digite o seu e-mail no campo abaixo e lhe enviaremos uma nova senha.</p>
                     <form>
                         <!-- <label for="input-cpf">Seu número:</label> -->
-                        <input type="email" id="input-cpf" placeholder="E-mail">
+                        <input type="text" id="input-cpf" placeholder="E-mail">
                     </form>
                 </div>
                 <div class="section-btn row">
                     <a href="#" class="btn">Redefinir senha</a>
-                    <a href="index.html" class="btn voltar">Voltar</a>
+                    <a href="ag-login.html" class="btn voltar">Voltar</a>
                 </div>
                 <hr class="d-none">
                 <div class="section-footer">
