--- a/ag-certificado.html
+++ b/ag-certificado.html
@@ -17,6 +17,9 @@
         </section>
         <section class="container section__main">
             <div class="position">
+                <div class="gov-logo--container">
+                    <img src="images/gov-logo.png" alt="gov logo" class="gov-logo">
+                </div>
                 <h2 class="forms-title">Acesse o nosso portal</h2>
                 <div class="forms-main">
                     <form>
