--- a/ag-login.html
+++ b/ag-login.html
@@ -40,11 +40,11 @@
                 </div>
                 <div class="section-btn row">
                     <a href="ag-dam.html" class="btn">Entrar</a>
-                    <a href="ag-certificado.html" class="btn">Login por certificado</a>
-                    <!-- <div class="row certificado">
+                    <a href="ag-contribuinte.html" class="btn voltar">Voltar</a>
+                    <div class="row certificado">
                         <a href="pg-certificado.html" class="anchor">Clique aqui</a>
                         <p>para entrar com o certificado.</p>
-                    </div> -->
+                    </div>
                 </div>
                 <hr class="d-none">
                 <div class="section-footer">
