--- a/index.html
+++ b/index.html
@@ -37,11 +37,9 @@
             position: fixed;
             bottom: 0;
             right: 0;
-            border: 1px solid #fff;
-            padding: .5em;
-            border-radius: 4px;
-            box-shadow: 0px 1px 1px #000;
+            padding: .5em 0;
             margin: .5em;
+            border-bottom: 2.5px solid #fff;
         }
 
         .btn:hover{
