--- a/ag-dam.html
+++ b/ag-dam.html
@@ -55,7 +55,11 @@
                 <option>3</option>
             </select>
         </div>
-        <section></section>
+        <section class="tributos__section mt-3 mb-2"></section>
+        <div class="column tributos-footer">
+            <p>Total de <span class="border px-1">50</span> registros</p>
+            <p>Página <span class="border px-1">1</span> de <span class="border px-1">5</span></p>
+        </div>
     </main>
     <footer class="container column align-items-center pt-3">
         <div class="w-50">
