--- a/ag-dam.html
+++ b/ag-dam.html
@@ -35,7 +35,7 @@
             <div class="column align-items-center gap-2">
                 <div class="user-text">
                     <p class="text-end">Olá, 
-                        <span class="user-name">user</span>
+                        <p class="user-name">user</p>
                     </p>
                     <p class="text-end">lorem ipsum</p>
                 </div>
