--- a/ag-dam.html
+++ b/ag-dam.html
@@ -35,9 +35,9 @@
             <div class="column align-items-center gap-2">
                 <div class="user-text">
                     <p class="text-end">Olá, 
-                        <p class="user-name">user</p>
+                        <span class="user-name">user</span>
                     </p>
-                    <p class="text-end">lorem ipsum</p>
+                    <p class="text-end msg">lorem ipsum</p>
                 </div>
                 <i class="bi bi-person-fill"></i>
             </div>
