--- a/ag-certificado.html
+++ b/ag-certificado.html
@@ -24,7 +24,7 @@
                 <div class="forms-main">
                     <form>
                         <label for="input-certificado">Certificado:</label>
-                        <input type="text" id="input-certificado" placeholder="Digite aqui o seu certificado">
+                        <input type="text" id="input-certificado" placeholder="Digite aqui seu certificado">
                     </form>
                 </div>
                 <div class="forms-footer row">
