--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
             padding: 0;
             box-sizing: border-box;
             font-family: "Rubik", sans-serif;
-            font-size: 1.125rem;
+            font-size: 1rem;
         }
 
         html{
@@ -21,9 +21,7 @@
             height: 100dvh;
         }
 
-        body{
-            background-color: #2765D9;
-        }
+        body{background-color: #2765D9}
 
         .ag-logo{
             position: absolute;
@@ -54,12 +52,11 @@
 </head>
 <body>
     <img src="images/logo/Union.png" alt="agape-logo" class="ag-logo">
-    
-        <a href="ag-contribuinte.html">
-            <p class="btn">
-                Entrar
-                <img src="images/entrar.png"/>
-            </p>
-        </a>
+    <a href="ag-contribuinte.html">
+        <span class="btn">
+            Entrar
+            <img src="images/entrar.png"/>
+        </span>
+    </a>
 </body>
 </html>
