--- a/ag-certificado.html
+++ b/ag-certificado.html
@@ -22,13 +22,13 @@
                 </div>
                 <h2 class="forms-title">Acesse o nosso portal</h2>
                 <div class="forms-main">
-                    <form>
+                    <form action="">
                         <label for="input-certificado">Certificado:</label>
                         <input type="text" id="input-certificado" placeholder="Digite aqui seu certificado">
                     </form>
                 </div>
                 <div class="forms-footer row">
-                    <form>
+                    <form action="">
                         <input type="checkbox" id="input-checkbox">
                         <label for="input-checkbox">Lembrar-me</label>
                     </form>
