--- a/ag-contribuinte.html
+++ b/ag-contribuinte.html
@@ -29,7 +29,7 @@
     <main class="container">
         <div class="d-lg-flex flex-row-reverse justify-content-between align-items-center py-lg-3">
             <div class="search-box">
-                <form>
+                <form action="">
                     <input type="text" id="input-busca" placeholder="Pesquisar">
                 </form>
                 <i class="bi bi-search"></i>
@@ -56,27 +56,27 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h4 class="modal-title">O que são esses botões?</h4>
+                    <h4 class="modal-title">Para que servem esses botões?</h4>
                     <button class="btn-close" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
-                    <div class="pt-1">
+                    <div class="pt-2">
                         <button class="a11y-button">
                             <i class="bi bi-zoom-out"></i>
                         </button>
-                        <span>Lorem ipsum dolor sit amet</span>
+                        <span class="ms-1">Este diminui o tamanho da fonte.</span>
                     </div>
-                    <div class="pt-1">
+                    <div class="pt-2">
                         <button class="a11y-button">
                             <i class="bi bi-zoom-in"></i>
                         </button>
-                        <span>Lorem ipsum dolor sit amet</span>
+                        <span class="ms-1">Este aumenta o tamanho da fonte</span>
                     </div>
-                    <div class="pt-1">
+                    <div class="pt-2">
                         <button class="a11y-button">
                             <i class="bi bi-circle-half"></i>
                         </button>
-                        <span>Lorem ipsum dolor sit amet</span>
+                        <span class="ms-1">O botão de alto contraste facilita a leitura de texto.</span>
                     </div>
                 </div>
             </div>
