--- a/ag-login.html
+++ b/ag-login.html
@@ -30,17 +30,17 @@
                 </div>
                 <h2 class="forms-title">Acesse o nosso portal</h2>
                 <div class="forms-main">
-                    <form>
+                    <form action="">
                         <label for="input-cpf">CPF/CNPJ:</label>
                         <input type="text" id="input-cpf" placeholder="Digite aqui seu CPF">
                     </form>
-                    <form>
+                    <form action="">
                         <label for="input-senha">Senha:</label>
                         <input type="password" id="input-senha" placeholder="Digite aqui sua senha">
                     </form>
                 </div>
                 <div class="forms-footer row">
-                    <form>
+                    <form action="">
                         <input type="checkbox" id="input-checkbox">
                         <label for="input-checkbox">Lembrar-me</label>
                     </form>
