--- a/ag-dam.html
+++ b/ag-dam.html
@@ -16,13 +16,13 @@
         <div class="container column align-items-center">
             <img src="images/logo/Union.png" alt="ag-logo" class="ag-logo">
             <div>
-                <button class="a11y-button" data-bs-toggle="tooltip" data-bs-title="Diminuir fonte" data-bs-placement="bottom">
+                <button class="a11y-button">
                     <i class="bi bi-zoom-out"></i>
                 </button>
-                <button class="a11y-button" data-bs-toggle="tooltip" data-bs-title="Contraste" data-bs-placement="bottom">
+                <button id="contraste-btn" class="a11y-button">
                     <i class="bi bi-circle-half"></i>
                 </button>
-                <button class="a11y-button" data-bs-toggle="tooltip" data-bs-title="Aumentar fonte" data-bs-placement="bottom">
+                <button class="a11y-button">
                     <i class="bi bi-zoom-in"></i>
                 </button>
             </div>
@@ -50,7 +50,10 @@
                     <li>Solicitar acesso</li>
                     <li>Redefinir senha</li>
                     <li>
-                        <a href='ag-login.html' class='popover-list--a'>Sair</a>
+                        <a href='ag-login.html' 
+                         class='popover-list--a'>
+                            Sair 
+                        </a>
                     </li>
                  </ul>"
                  data-bs-html="true">
@@ -71,59 +74,57 @@
                 <option>3</option>
             </select>
         </div>
-       
         <section class="tributos__section mt-3 mb-1">
             <div>
-                <h5 class="tributos-title bg-light">Tributo</h5>
+                <h5 class="tributos-title">Tributo</h5>
                 <!-- COMO VAI SER A ESCOLHA DO TRIBUTO A SER PAGO? -->
                 <p>IPTU - IPTU GRAND</p> 
                 <p>ALUGUEL 2 - ALUGUEL</p>
                 <p>LIX - COLETA DE LIXO</p>
             </div>
             <div>
-                <h5 class="tributos-title bg-light">Emissão</h5>
+                <h5 class="tributos-title">Emissão</h5>
                 <p>25/09/2023</p>
                 <p>15/09/2023</p>
                 <p>15/09/2023</p>
             </div>
             <div>
-                <h5 class="tributos-title bg-light">Vencimento</h5>
+                <h5 class="tributos-title">Vencimento</h5>
                 <p>25/09/2023</p>
                 <p>15/09/2023</p>
                 <p>15/09/2023</p>
             </div>
             <div>
-                <h5 class="tributos-title bg-light">Subtotal</h5>
+                <h5 class="tributos-title">Subtotal</h5>
                 <p>1.000,00</p>
                 <p>1.000,00</p>
                 <p>200,00</p>
             </div>
             <div>
-                <h5 class="tributos-title bg-light">Desconto</h5>
+                <h5 class="tributos-title">Desconto</h5>
                 <p>0,00</p>
                 <p>0,00</p>
                 <p>0,00</p>
             </div>
             <div>
-                <h5 class="tributos-title bg-light">Juros</h5>
+                <h5 class="tributos-title">Juros</h5>
                 <p>0,00</p>
                 <p>0,00</p>
                 <p>0,00</p>
             </div>
             <div>
-                <h5 class="tributos-title bg-light">Multa</h5>
+                <h5 class="tributos-title">Multa</h5>
                 <p>0,00</p>
                 <p>0,00</p>
                 <p>0,00</p>
             </div>
             <div>
-                <h5 class="tributos-title bg-light">Situação</h5>
+                <h5 class="tributos-title">Situação</h5>
                 <p>Pendente</p>
                 <p>Pendente</p>
                 <p>Pendente</p>
             </div>
         </section>
-        
         <div class="column tributos-footer">
             <p>Total de <span class="border px-1">50</span> registros</p>
             <p>Página <span class="border px-1">1</span> de <span class="border px-1">5</span></p>
@@ -174,6 +175,43 @@
         </div>
         <p class="footer-text">Ágape © Copyright 2024</p>
     </footer>
+    <!-- MODAL -->
+    <div class="a11y-modal">
+        <button class="btn btn-info" data-bs-toggle="modal" data-bs-target=".modal">
+            <i class="bi bi-universal-access-circle text-white"></i>
+        </button>
+    </div>
+    <div class="modal fade" tabindex="-1">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title">Para que servem esses botões?</h4>
+                    <button class="btn-close" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body">
+                    <div class="pt-2">
+                        <button class="a11y-button">
+                            <i class="bi bi-zoom-out"></i>
+                        </button>
+                        <span class="ms-1">Este diminui o tamanho da fonte.</span>
+                    </div>
+                    <div class="pt-2">
+                        <button class="a11y-button">
+                            <i class="bi bi-zoom-in"></i>
+                        </button>
+                        <span class="ms-1">Este aumenta o tamanho da fonte</span>
+                    </div>
+                    <div class="pt-2">
+                        <button class="a11y-button">
+                            <i class="bi bi-circle-half"></i>
+                        </button>
+                        <span class="ms-1">O botão de alto contraste facilita a leitura de texto.</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> 
+    <script src="app.js"></script>
     <script src="js/dam.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
