--- a/ag-dam.html
+++ b/ag-dam.html
@@ -177,7 +177,7 @@
     </footer>
     <!-- MODAL -->
     <div class="a11y-modal">
-        <button class="btn btn-info" data-bs-toggle="modal" data-bs-target=".modal">
+        <button class="a11y-button" data-bs-toggle="modal" data-bs-target=".modal">
             <i class="bi bi-universal-access-circle text-white"></i>
         </button>
     </div>
