--- a/index.html
+++ b/index.html
@@ -4,59 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="images/logo/Icon.png" type="image/x-icon">
+    <link rel="stylesheet" href="css/index.css">
     <title>Ágape Sistemas</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Bricolage+Grotesque:opsz,wght@12..96,200..800&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
-        
-        *{
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-            font-family: "Rubik", sans-serif;
-            font-size: 1rem;
-        }
-
-        html{
-            background: linear-gradient(to top, #022C90 0%, #2765D9 100%);
-            height: 100dvh;
-        }
-
-        body{background-color: #2765D9}
-
-        .ag-logo{
-            position: absolute;
-            top: 40%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            width: 25vw;
-            max-width: 250px;
-        }
-
-        .btn{
-            display: flex;
-            align-items: center;
-            gap: .5em;
-            color: #fff;
-            position: fixed;
-            bottom: 0;
-            right: 0;
-            padding: .5em 0;
-            margin: .5em;
-            border-bottom: 2.5px solid #fff;
-        }
-
-        .btn:hover{
-            opacity: .5;
-        }
-    </style>
 </head>
 <body>
-    <img src="images/logo/Union.png" alt="agape logo" class="ag-logo">
-    <a href="ag-contribuinte.html">
-        <span class="btn">
-            Entrar
-            <img src="images/entrar.png"/>
-        </span>
-    </a>
+    <div class="content">
+        <img src="images/logo/Union.png" alt="agape logo" class="ag-logo">
+        <a href="ag-contribuinte.html">
+            <span class="btn"> Entrar
+                <img src="images/entrar.png"/>
+            </span>
+        </a>
+        <p>Ágape © Copyright 2024</p>
+    </div>
 </body>
 </html>
