--- a/ag-senha.html
+++ b/ag-senha.html
@@ -20,9 +20,9 @@
             <div class="position">
                 <h2 class="forms-title">Esqueceu a senha?</h2>
                 <div class="forms-main">
-                    <p>Digite o seu e-mail no campo abaixo e lhe enviaremos uma nova senha.</p>
+                    <p>Digite o seu telefone no campo abaixo e lhe enviaremos uma nova senha.</p>
                     <form action="">
-                        <input type="text" id="input-cpf" placeholder="E-mail">
+                        <input type="text" id="input-cpf" placeholder="Digite aqui seu telefone">
                     </form>
                 </div>
                 <div class="section-btn row">
