--- a/ag-dam.html
+++ b/ag-dam.html
@@ -269,6 +269,12 @@
                     </div>
                     <div class="pt-2">
                         <button class="a11y-button">
+                            <i class="bi bi-fonts"></i>
+                        </button>
+                        <span class="ms-1">Este retorna o tamanho para a fonte padrão</span>
+                    </div>
+                    <div class="pt-2">
+                        <button class="a11y-button">
                             <i class="bi bi-circle-half"></i>
                         </button>
                         <span class="ms-1">O botão de alto contraste facilita a leitura de texto.</span>
