--- a/ag-contribuinte.html
+++ b/ag-contribuinte.html
@@ -15,11 +15,11 @@
         <div class="container d-flex justify-content-between align-items-center">
             <img src="images/logo/Union.png" class="ag-logo" alt="agape">
             <div>
-                <button class="a11y-button" id="btnDiminuir">
-                    <i class="bi bi-zoom-out"></i>
-                </button>
                 <button class="a11y-button" id="contraste-btn">
                     <i class="bi bi-circle-half"></i>
+                </button>
+                <button class="a11y-button" id="btnDiminuir">
+                    <i class="bi bi-zoom-out"></i>
                 </button>
                 <button class="a11y-button" id="btnAumentar">
                     <i class="bi bi-zoom-in"></i>
@@ -37,6 +37,9 @@
                     <input type="text" id="input-busca" placeholder="Pesquisar">
                 </form>
                 <i class="bi bi-search"></i>
+            </div>
+            <div class="gov-logo--container">
+                <img src="images/gov-logo.png" alt="gov logo" class="gov-logo">
             </div>
             <h6 class="grid-title">Portal do contribuinte</h6>
         </div>
@@ -66,6 +69,12 @@
                 <div class="modal-body">
                     <div class="pt-2">
                         <button class="a11y-button">
+                            <i class="bi bi-circle-half"></i>
+                        </button>
+                        <span class="ms-1">O botão de alto contraste facilita a leitura de texto.</span>
+                    </div>
+                    <div class="pt-2">
+                        <button class="a11y-button">
                             <i class="bi bi-zoom-out"></i>
                         </button>
                         <span class="ms-1">Este diminui o tamanho da fonte.</span>
@@ -81,12 +90,6 @@
                             <i class="bi bi-fonts"></i>
                         </button>
                         <span class="ms-1">Este retorna o tamanho para a fonte padrão</span>
-                    </div>
-                    <div class="pt-2">
-                        <button class="a11y-button">
-                            <i class="bi bi-circle-half"></i>
-                        </button>
-                        <span class="ms-1">O botão de alto contraste facilita a leitura de texto.</span>
                     </div>
                     <!-- <div class="pt-2">
                         <button class="a11y-button">
