--- a/ag-dam.html
+++ b/ag-dam.html
@@ -17,11 +17,11 @@
         <div class="container column align-items-center">
             <img src="images/logo/Union.png" alt="ag-logo" class="ag-logo">
             <div>
+                <button class="a11y-button" id="contraste-btn">
+                    <i class="bi bi-circle-half"></i>
+                </button>
                 <button class="a11y-button" id="btnDiminuir">
                     <i class="bi bi-zoom-out"></i>
-                </button>
-                <button id="contraste-btn" class="a11y-button">
-                    <i class="bi bi-circle-half"></i>
                 </button>
                 <button class="a11y-button" id="btnAumentar">
                     <i class="bi bi-zoom-in"></i>
@@ -257,6 +257,12 @@
                 <div class="modal-body">
                     <div class="pt-2">
                         <button class="a11y-button">
+                            <i class="bi bi-circle-half"></i>
+                        </button>
+                        <span class="ms-1">O botão de alto contraste facilita a leitura de texto.</span>
+                    </div>
+                    <div class="pt-2">
+                        <button class="a11y-button">
                             <i class="bi bi-zoom-out"></i>
                         </button>
                         <span class="ms-1">Este diminui o tamanho da fonte.</span>
@@ -272,12 +278,6 @@
                             <i class="bi bi-fonts"></i>
                         </button>
                         <span class="ms-1">Este retorna o tamanho para a fonte padrão</span>
-                    </div>
-                    <div class="pt-2">
-                        <button class="a11y-button">
-                            <i class="bi bi-circle-half"></i>
-                        </button>
-                        <span class="ms-1">O botão de alto contraste facilita a leitura de texto.</span>
                     </div>
                 </div>
             </div>
