modified logo position

--- a/ag-contribuinte.html
+++ b/ag-contribuinte.html
@@ -32,14 +32,14 @@
     </header>
     <main class="container">
         <div class="d-md-flex flex-row-reverse justify-content-between align-items-center py-md-3">
+            <div class="gov-logo--container text-end">
+                <img src="images/gov-logo.png" alt="gov logo" class="gov-logo">
+            </div>
             <div class="search-box">
                 <form action="">
                     <input type="text" id="input-busca" placeholder="Pesquisar">
                 </form>
                 <i class="bi bi-search"></i>
-            </div>
-            <div class="gov-logo--container">
-                <img src="images/gov-logo.png" alt="gov logo" class="gov-logo">
             </div>
             <h6 class="grid-title">Portal do contribuinte</h6>
         </div>
