1. Ajuste de acentuação 2. Sistema DAM-ISS RETIDO 3. Remoção das abreviações 4. Adição de ponto final no modal 5. Mudança no nome e mensagem para o usuário.

--- a/ag-dam.html
+++ b/ag-dam.html
@@ -40,9 +40,9 @@
             <div class="column align-items-center gap-2">
                 <div class="user-text">
                     <p class="text-end">Olá, 
-                        <span class="user-name">user</span>
+                        <span class="user-name">José</span>
                     </p>
-                    <p class="text-end msg">lorem ipsum</p>
+                    <p class="text-end msg">Seja bem-vindo!</p>
                 </div>
                 <button class="user-btn" 
                  data-bs-toggle="popover"
