--- a/ag-login.html
+++ b/ag-login.html
@@ -34,7 +34,7 @@
                 <div class="forms-main">
                     <form action="">
                         <label for="input-cpf">CPF/CNPJ:</label>
-                        <input type="text" id="input-cpf" placeholder="Digite aqui seu CPF">
+                        <input type="text" id="input-cpf" placeholder="Digite aqui seu CPF/CNPJ">
                     </form>
                     <form action="">
                         <label for="input-senha">Senha:</label>
