--- a/ag-senha.html
+++ b/ag-senha.html
@@ -15,13 +15,13 @@
             <div>
                 <img src="images/logo/Union.png" class="ag-logo" alt="agape">
             </div>
-            <p class="d-none">Bem vindo(a) ao portal do contribuinte</p>
+            <p class="d-none">Bem vindo(a) ao<br> portal do contribuinte</p>
         </section>
         <section class="container section__main">
             <div class="position">
                 <h2 class="forms-title">Esqueceu a senha?</h2>
                 <div class="forms-main">
-                    <p>Digite o seu telefone no campo abaixo e lhe enviaremos uma nova senha.</p>
+                    <p>Digite o seu telefone no campo abaixo e enviaremos uma nova senha.</p>
                     <form action="">
                         <input type="text" id="input-cpf" placeholder="Digite aqui seu telefone">
                     </form>
