modified btn position(login)

--- a/ag-login.html
+++ b/ag-login.html
@@ -12,8 +12,22 @@
 <body>
     <div class="wrapper column">
         <section class="container section__head column">
-            <div>
+            <div class="column ag-logo--container">
                 <img src="images/logo/Union.png" alt="agape" class="ag-logo">
+                <div class="btn-group">
+                    <button class="a11y-button" id="contraste-btn">
+                        <i class="bi bi-circle-half"></i>
+                    </button>
+                    <button class="a11y-button" id="btnDiminuir">
+                        <i class="bi bi-zoom-out"></i>
+                    </button>
+                    <button class="a11y-button" id="btnAumentar">
+                        <i class="bi bi-zoom-in"></i>
+                    </button>
+                    <button class="a11y-button" id="btnReset">
+                        <i class="bi bi-fonts"></i>
+                    </button>
+                </div>
             </div>
             <div class="welcome-box">
                 <p class="d-none">Bem vindo(a) ao <br>Portal do Contribuinte!</p>
@@ -62,20 +76,6 @@
                 </div>
             </div>
         </section>
-    </div>
-    <div class="btn-group">
-        <button class="a11y-button" id="contraste-btn">
-            <i class="bi bi-circle-half"></i>
-        </button>
-        <button class="a11y-button" id="btnDiminuir">
-            <i class="bi bi-zoom-out"></i>
-        </button>
-        <button class="a11y-button" id="btnAumentar">
-            <i class="bi bi-zoom-in"></i>
-        </button>
-        <button class="a11y-button" id="btnReset">
-            <i class="bi bi-fonts"></i>
-        </button>
     </div>
     <script src="app.js"></script>
     <script src="js/mask.js"></script>
