- Ajustei o padding para melhor encaixe em telas menores (desktop). - Removi a header de todos os tributos, só deixando a primeira visível para o destkop.

--- a/ag-dam.html
+++ b/ag-dam.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="curtain"></div>
-    <header class="py-3"> 
+    <header class="py-lg-2 py-xxl-3"> 
         <div class="container column align-items-center">
             <img src="images/logo/Union.png" alt="ag-logo" class="ag-logo">
             <div>
@@ -147,7 +147,7 @@
                 </div>
             </div>
             <div class="tributos">
-                <div class="tributos-title">
+                <div class="tributos-title remove">
                     <span>TRIBUTO</span>
                     <span>EMISSÃO</span>
                     <span>VENCIMENTO</span>
@@ -169,7 +169,7 @@
                 </div>
             </div>
             <div class="tributos">
-                <div class="tributos-title">
+                <div class="tributos-title remove">
                     <span>TRIBUTO</span>
                     <span>EMISSÃO</span>
                     <span>VENCIMENTO</span>
@@ -191,7 +191,7 @@
                 </div>
             </div>
             <div class="tributos">
-                <div class="tributos-title">
+                <div class="tributos-title remove">
                     <span>TRIBUTO</span>
                     <span>EMISSÃO</span>
                     <span>VENCIMENTO</span>
@@ -213,7 +213,7 @@
                 </div>
             </div>
             <div class="tributos">
-                <div class="tributos-title">
+                <div class="tributos-title remove">
                     <span>TRIBUTO</span>
                     <span>EMISSÃO</span>
                     <span>VENCIMENTO</span>
@@ -252,7 +252,7 @@
                             <button class="btn-close" data-bs-dismiss="modal"></button>
                         </div>
                         <div class="modal-body">
-                            <div class="tributos">
+                            <div class="modal-tributos d-flex">
                                 <div>
                                     <span>EMISSÃO</span>
                                     <span>VENCIMENTO</span>
