--- a/ag-contribuinte.html
+++ b/ag-contribuinte.html
@@ -58,7 +58,7 @@
         </div>
     </header>
     <main class="container">
-        <div class="column pt-3">
+        <div class="column pt-lg-2 pt-xxl-3">
             <div class="gov-logo--container">
                 <img src="images/gov-logo.png" alt="gov logo" class="gov-logo">
             </div>
@@ -77,7 +77,7 @@
                 </button>
             </div>
         </div>
-        <div class="d-md-flex flex-row-reverse justify-content-between py-md-3">
+        <div class="d-md-flex flex-row-reverse justify-content-between    py-md-3">
             <div class="search-box">
                 <form action="">
                     <input type="text" id="input-busca" placeholder="Pesquisar">
