O usuário agora pode selecionar várias opcoes de tributos

--- a/ag-dam.html
+++ b/ag-dam.html
@@ -116,7 +116,7 @@
                 <i class="bi bi-funnel"></i>
                 <p>Filtros</p>
             </button>
-            <select type="text" id="input-tributos" class="flex-grow-1 p-2">
+            <select type="text" id="input-tributos" class="flex-grow-1 p-2" multiple>
                 <option disabled="disabled" selected="selected">Selecione um tributo</option>
                 <option>IPTU - IPTU GRAND</option>
                 <option>ALUGUEL 2 - ALUGUEL</option>
@@ -347,7 +347,7 @@
                 </li>
             </ul>
             <h5 class="list-title">Ano</h5>
-            <select class="filter-select w-100">
+            <select class="filter-select w-100" multiple>
                 <option selected>Selecione o ano</option>
                 <option value="2024">2024</option>
                 <option value="2023">2023</option>
