corrigi o width do "input-date" no filtro mobile

--- a/ag-dam.html
+++ b/ag-dam.html
@@ -354,11 +354,11 @@
             <ul class="aside-list">
                 <span>Inicial</span>
                 <li>
-                    <input type="date" class="w-100 input-date">
+                    <input type="date" class="input-date">
                 </li>
                 <span>Final</span>
                 <li>
-                    <input type="date" class="w-100 input-date">
+                    <input type="date" class="input-date">
                 </li>
             </ul>
             <div class="d-flex gap-2">
