modal de pagamento responsivo para mobile

--- a/ag-dam.html
+++ b/ag-dam.html
@@ -388,6 +388,8 @@
                                     <span><i class="bi bi-printer"></i></span>
                                     <span><i class="bi bi-x-circle"></i></span>
                                 </div>
+                            </div>
+                            <div class="modal-tributos">
                                 <div class="modal-tributos-title remove">
                                     <span>EMISSÃO</span>
                                     <span>VENCIMENTO</span>
@@ -406,6 +408,8 @@
                                     <span><i class="bi bi-printer"></i></span>
                                     <span><i class="bi bi-x-circle"></i></span>
                                 </div>
+                            </div>
+                            <div class="modal-tributos">
                                 <div class="modal-tributos-title remove">
                                     <span>EMISSÃO</span>
                                     <span>VENCIMENTO</span>
@@ -420,24 +424,6 @@
                                     <span>25/09/2023</span>
                                     <span>1200,00</span>
                                     <span>1235,00</span>
-                                    <span>Pendente</span>
-                                    <span><i class="bi bi-printer"></i></span>
-                                    <span><i class="bi bi-x-circle"></i></span>
-                                </div>
-                                <div class="modal-tributos-title remove">
-                                    <span>EMISSÃO</span>
-                                    <span>VENCIMENTO</span>
-                                    <span>SUBTOTAL</span>
-                                    <span>VALOR CORRIGIDO</span>
-                                    <span>SITUAÇÃO</span>
-                                    <span>IMPRIMIR</span>
-                                    <span>CANCELAR</span>
-                                </div>
-                                <div class="modal-tributos-content">
-                                    <span>25/09/2023</span>
-                                    <span>25/09/2023</span>
-                                    <span>1200,00</span>
-                                    <span>1535,00</span>
                                     <span>Pendente</span>
                                     <span><i class="bi bi-printer"></i></span>
                                     <span><i class="bi bi-x-circle"></i></span>
