--- a/ag-dam.html
+++ b/ag-dam.html
@@ -138,9 +138,9 @@
                     <span>JUROS</span>
                     <span>MULTA</span>
                     <span>STATUS</span>
-                    <span>TAXA EXP.</span>
+                    <!-- <span>TAXA EXP.</span>
                     <span>TAXA ADICIONAL</span>
-                    <span>VALOR CORRIGIDO</span>
+                    <span>VALOR CORRIGIDO</span> -->
                 </div>
                 <div class="tributos-content">
                     <span>ISS NOTA FISCAL</span>
@@ -153,9 +153,9 @@
                     <span>0,54</span>
                     <span>1,50</span>
                     <span>Pendente</span>
-                    <span>2,50</span>
+                    <!-- <span>2,50</span>
                     <span>0,00</span>
-                    <span>9,54</span>
+                    <span>9,54</span> -->
                 </div>
             </div>
             <div class="tributos">
@@ -170,9 +170,9 @@
                     <span>JUROS</span>
                     <span>MULTA</span>
                     <span>STATUS</span>
-                    <span>TAXA EXP.</span>
+                    <!-- <span>TAXA EXP.</span>
                     <span>TAXA ADICIONAL</span>
-                    <span>VALOR CORRIGIDO</span>
+                    <span>VALOR CORRIGIDO</span> -->
                 </div>
                 <div class="tributos-content">
                     <span>ISS NOTA FISCAL</span>
@@ -185,9 +185,9 @@
                     <span>5,55</span>
                     <span>4,73</span>
                     <span>Pendente</span>
+                    <!-- <span>0,00</span>
                     <span>0,00</span>
-                    <span>0,00</span>
-                    <span>26,03</span>
+                    <span>26,03</span> -->
                 </div>
             </div>
             <div class="tributos">
@@ -202,9 +202,9 @@
                     <span>JUROS</span>
                     <span>MULTA</span>
                     <span>STATUS</span>
-                    <span>TAXA EXP.</span>
+                    <!-- <span>TAXA EXP.</span>
                     <span>TAXA ADICIONAL</span>
-                    <span>VALOR CORRIGIDO</span>
+                    <span>VALOR CORRIGIDO</span> -->
                 </div>
                 <div class="tributos-content">
                     <span>ALVARÁ</span>
@@ -217,9 +217,9 @@
                     <span>2,18</span>
                     <span>1,80</span>
                     <span>Ativada</span>
+                    <!-- <span>0,00</span>
                     <span>0,00</span>
-                    <span>0,00</span>
-                    <span>9,98</span>
+                    <span>9,98</span> -->
                 </div>
             </div>
             <div class="tributos">
@@ -234,9 +234,9 @@
                     <span>JUROS</span>
                     <span>MULTA</span>
                     <span>STATUS</span>
-                    <span>TAXA EXP.</span>
+                    <!-- <span>TAXA EXP.</span>
                     <span>TAXA ADICIONAL</span>
-                    <span>VALOR CORRIGIDO</span>
+                    <span>VALOR CORRIGIDO</span> -->
                 </div>
                 <div class="tributos-content">
                     <span>IPTU</span>
@@ -249,9 +249,9 @@
                     <span>133,24</span>
                     <span>48,92</span>
                     <span>Ativada</span>
-                    <span>8,16</span>
+                    <!-- <span>8,16</span>
                     <span>0,00</span>
-                    <span>345,24</span>
+                    <span>345,24</span> -->
                 </div>
             </div>
             <div class="tributos">
@@ -266,9 +266,9 @@
                     <span>JUROS</span>
                     <span>MULTA</span>
                     <span>STATUS</span>
-                    <span>TAXA EXP.</span>
+                    <!-- <span>TAXA EXP.</span>
                     <span>TAXA ADICIONAL</span>
-                    <span>VALOR CORRIGIDO</span>
+                    <span>VALOR CORRIGIDO</span> -->
                 </div>
                 <div class="tributos-content">
                     <span>ISS NOTA FISCAL</span>
@@ -281,9 +281,9 @@
                     <span>5,55</span>
                     <span>4,73</span>
                     <span>Pendente</span>
+                    <!-- <span>0,00</span>
                     <span>0,00</span>
-                    <span>0,00</span>
-                    <span>26,03</span>
+                    <span>26,03</span> -->
                 </div>
             </div>
             <div class="tributos">
@@ -298,9 +298,9 @@
                     <span>JUROS</span>
                     <span>MULTA</span>
                     <span>STATUS</span>
-                    <span>TAXA EXP.</span>
+                    <!-- <span>TAXA EXP.</span>
                     <span>TAXA ADICIONAL</span>
-                    <span>VALOR CORRIGIDO</span>
+                    <span>VALOR CORRIGIDO</span> -->
                 </div>
                 <div class="tributos-content">
                     <span>ALVARÁ</span>
@@ -313,9 +313,9 @@
                     <span>2,18</span>
                     <span>1,80</span>
                     <span>Ativada</span>
+                    <!-- <span>0,00</span>
                     <span>0,00</span>
-                    <span>0,00</span>
-                    <span>9,98</span>
+                    <span>9,98</span> -->
                 </div>
             </div>
             <div class="tributos">
@@ -330,9 +330,9 @@
                     <span>JUROS</span>
                     <span>MULTA</span>
                     <span>STATUS</span>
-                    <span>TAXA EXP.</span>
+                    <!-- <span>TAXA EXP.</span>
                     <span>TAXA ADICIONAL</span>
-                    <span>VALOR CORRIGIDO</span>
+                    <span>VALOR CORRIGIDO</span> -->
                 </div>
                 <div class="tributos-content">
                     <span>IPTU</span>
@@ -345,9 +345,9 @@
                     <span>133,24</span>
                     <span>48,92</span>
                     <span>Ativada</span>
-                    <span>8,16</span>
+                    <!-- <span>8,16</span>
                     <span>0,00</span>
-                    <span>345,24</span>
+                    <span>345,24</span> -->
                 </div>
             </div>
         </section>
